--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ dataclasses
 networkx<=2.2
 
 #zuper-nodes
-zuper-commons
+#zuper-commons
 #zuper-utils
 zuper-typing-z5
 
@@ -21,7 +21,7 @@ zuper-typing-z5
 opencv-python>=4.1
 numpy==1.16.2
 
-#-e git://github.com/AndreaCensi/zuper-commons.git@z5#egg=zuper-commons
+-e git://github.com/AndreaCensi/zuper-commons.git@z5#egg=zuper-commons
 -e git://github.com/AndreaCensi/zuper-utils.git@z5#egg=zuper-utils
 -e git://github.com/AndreaCensi/zuper-nodes.git@z5#egg=zuper-nodes
 -e git://github.com/duckietown/aido-protocols.git@z5#egg=aido-protocols
